@@ -2,6 +2,7 @@ v7.8.0
   - Fix OAuth login with GitLab installed in relative URL
   - GitLab CI has same version as GitLab since now
   - Allow to pass description and tag list during Runner's registration
+  - Added api for project jobs
 
 v5.4.2
   - Fix exposure of project token via build data
